# nimble

./: .coveragerc  README.md  pyproject.toml  pytest.ini  requirements.txt
nimble/: __init__.py  api.py  api_config.py  data_object.py  descriptor.py  eq.py  field_condition.py  in_.py  module.py  query.py  select.py  table.py  unprocessable_query_exception.py  user.py  user_create.py  user_descriptor.py  user_module.py  user_select.py
nimble/tests/: api_test.py  data_object_test.py  module_test.py  user_module_test.py
