[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "nimble"
version = "1.0.5"
authors = [
    { name = "Michael Mueller", email = "michaelmuelleronline@gmx.de" }
]
description = "Tiny app framework"
readme = "README.md"
license = { text = "Apache-2.0" } # Specify your license here if available
dynamic = ["dependencies"] # Changed

[project.urls]
"Source Code" = "https://github.com/MichaelMueller/nimble.git"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
# Dynamically loads dependencies from requirements.txt
dependencies = { file = ["requirements.txt"] }
